--- a/team_builder/projects/templates/projects/project_detail.html
+++ b/team_builder/projects/templates/projects/project_detail.html
@@ -54,9 +54,7 @@
         <h3>Project Needs</h3>
         <ul class="circle--link--list">
             {% for position in project.position_set.all %}
-              {% for skill in position.skill_set.all %}
-                 <li><a>{{ skill}}</a></li>
-              {% endfor %}
+                 <li><a>{{ position.skill.name }}</a></li>
             {% endfor %}
         </ul>
       </div>
