working on adding skills for each position

--- a/team_builder/projects/templates/projects/project_detail.html
+++ b/team_builder/projects/templates/projects/project_detail.html
@@ -53,8 +53,8 @@
       <div class="circle--secondary--module">
         <h3>Project Needs</h3>
         <ul class="circle--link--list">
-            {% for position in project.position_set.all %}
-                 <li><a>{{ position.skill.name }}</a></li>
+            {% for skill in project.position.skills_set.all %}
+                  <li><a>{{ skill }}</a></li>
             {% endfor %}
         </ul>
       </div>
