--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -39,6 +39,9 @@
                         </datalist>
                         {{ form.description.error }}
                         {{ form.description }}
+                        Pick from a list of skills required
+                        <br>
+                        {{ form.skills }}
                         {% if form.instance.pk %}{{ a_form.DELETE }}{% endif %}
                     </li>
                   {% endfor %}
