--- a/team_builder/projects/templates/projects/project_edit.html
+++ b/team_builder/projects/templates/projects/project_edit.html
@@ -37,7 +37,7 @@
                   {{ form.description }}
                   Pick from a list of skills required
                   <br>
-                  {{ form.skills }}
+                  {{ form.skill }}
                   {% if form.instance.pk %}{{ form.DELETE }}{% endif %}
               </li>
             {% endfor %}
