--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -41,7 +41,7 @@
                         {{ form.description }}
                         Pick from a list of skills required
                         <br>
-                        {{ form.skills }}
+                        {{ form.skill }}
                         {% if form.instance.pk %}{{ a_form.DELETE }}{% endif %}
                     </li>
                   {% endfor %}
