--- a/team_builder/accounts/templates/accounts/edit_profile.html
+++ b/team_builder/accounts/templates/accounts/edit_profile.html
@@ -22,32 +22,30 @@
           </div>
 
           <h2>Past Projects</h2>
+          {% if accepted_applications %}
           <table class="u-full-width circle--table">
-            <thead>
-              <tr>
-                <th>Project Title</th>
-                <th class="circle--cell--right">Project Needs</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="clickable-row" data-href="project.html">
-                <td>
-                  <h3>Invoice Delivery Tool</h3>
-                </td>
-                <td class="circle--cell--right">
-                  <span class="secondary-label">Rails Developer</span>
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="project.html">
-                <td>
-                  <h3>Twitter Client</h3>
-                </td>
-                <td class="circle--cell--right">
-                  <span class="secondary-label">Designer</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+             <thead>
+               <tr>
+                 <th>Project Title</th>
+                 <th class="circle--cell--right">Project Needs</th>
+               </tr>
+             </thead>
+           <tbody>
+           {%  for application in accepted_applications %}
+             <tr class="clickable-row" data-href="{% url 'projects:detail' pk=application.project.id %}">
+                 <td>
+                   <h3>{{application.project.title}}</h3>
+                 </td>
+                 <td class="circle--cell--right">
+                   <span class="secondary-label">{{application.position}}</span>
+                 </td>
+               </tr>
+           {% endfor %}
+           </tbody>
+         </table>
+         {% else %}
+         <p>No past projects yet!</p>
+         {% endif %}
         </div>
 
         <div class="grid-25 grid-push-5">
