--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% load static from staticfiles %}
-{% block title %}{{ form.title}} {% endblock %}
+{% block title %}| add {% endblock %}
 {%  block content %}
 {{ position_formset.form.errors }}
 
